Implementing board